adde date in invoice

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -104,7 +104,7 @@
         </div>
       </div>
       <h1 class="absolute left-10 bottom-[25vh] font-semibold text-xs">
-        Valid until: 23/02/24
+        Valid until: <%= new Date().toLocaleDateString() %>
       </h1>
       <div
         class="bg-black w-[95vw] h-[15vh] md:h-[14vh] text-white flex flex-col justify-center rounded-[50px] px-10 py-2 absolute bottom-2"
